--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2149,6 +2149,16 @@ input, select, textarea {
 				border-radius: 100%;
 				width: 100%;
 			}
+         .image.avatar {
+  width: 220px;
+  height: 220px;
+}
+
+.image.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* List */
 
